# Supermarket-Transaction-Analysis

./: .gitignore  README.md  app.py  config.py  pyproject.toml
data/processed/: .gitkeep
data/raw/: .gitkeep
src/: __init__.py  clustering.py  data_loader.py  data_processor.py  metrics.py  recommender.py  visualizations.py
tests/: test_cache.py  test_catalog_upload.py  test_clustering.py  test_data_pipeline.py  test_data_upload.py  test_file_formats.py  test_recommender.py  test_visualizations.py
utils/: __init__.py
