[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "mlxtend>=0.23.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=5.17.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.51.0",
]
